<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (C) 2013 47 Degrees, LLC
  ~  http://47deg.com
  ~  hello@47deg.com
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~  Unless required by applicable law or agreed to in writing, software
  ~  distributed under the License is distributed on an "AS IS" BASIS,
  ~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  See the License for the specific language governing permissions and
  ~  limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            

   
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            

        <CheckBox
                android:id="@+id/cb_swipe_action_sms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/sms"
                android:textSize="18sp"
                android:textStyle="bold"/>

        <View
            android:layout_width="fill_parent"
            android:layout_marginBottom="12dp"
            android:layout_height="2dp"
            android:background="#ffbcbcbc" >
        </View>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:text="@string/leftAction"/>
        
        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="1px"
            android:background="#ffbcbcbc" >
        </View>

        <RadioGroup
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_left_recover"
                    
                    android:text="@string/cb_recover"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_left_del"
                    
                    android:text="@string/cb_del"/>

        </RadioGroup>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:text="@string/rightAction"/>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="1px"
            android:background="#ffbcbcbc" >
        </View>

        <RadioGroup
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_right_recover"
                    
                    android:text="@string/cb_recover"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/action_right_del"
                    
                    android:text="@string/cb_del"/>

        </RadioGroup>
        <!-- -->

        <CheckBox
                android:id="@+id/cb_swipe_action_rules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginTop="20dp"
                android:text="@string/rules"
                android:textSize="18sp"
                android:textStyle="bold"/>
       
        <View
            android:layout_width="fill_parent"
            android:layout_marginBottom="12dp"
            android:layout_height="2dp"
            android:background="#ffbcbcbc" >
        </View>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:text="@string/leftAction"/>
        
        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="1px"
            android:background="#ffbcbcbc" >
        </View>

        <RadioGroup
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rule_action_left_edit"
                    android:text="@string/cb_edit"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rule_action_left_del"
                    android:text="@string/cb_del"/>

        </RadioGroup>


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginLeft="15dp"
                android:text="@string/rightAction"/>

        <View
            android:layout_width="fill_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="1px"
            android:background="#ffbcbcbc" >
        </View>

        <RadioGroup
                android:orientation="horizontal"
                android:layout_marginLeft="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rule_action_right_edit"
                    android:text="@string/cb_edit"/>

            <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rule_action_right_del"
                    android:text="@string/cb_del"/>

        </RadioGroup>
        
    </LinearLayout>

</ScrollView>